kubernetes/argocd/apps/workloads/drift/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drift
  namespace: drift
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: traefik-default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: "drift.paulynomial.com"
      http:
        paths:
          - backend:
              service:
                name: drift
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - drift.paulynomial.com
      secretName: drift-paulynomial-com-tls
